Initial code to allow downloading episodes as single nzb's if the entire season is snatched. Has new option "Download season packs" for each tv show.
Still need to fine tune regex code for nzb splitting as it is very
limiting at the moment.

--- a/data/interfaces/default/apiBuilder.tmpl
+++ b/data/interfaces/default/apiBuilder.tmpl
@@ -92,6 +92,8 @@ addList("sb.setdefaults-status", "Ignored", "&amp;status=ignored", "sb.setdefaul
 addOption("sb.setdefaults-opt", "Optional Param", "", 1);
 addList("sb.setdefaults-opt", "No Season Folder", "&amp;season_folder=0", "quality");
 addList("sb.setdefaults-opt", "Use Season Folder", "&amp;season_folder=1", "quality");
+addList("sb.setdefaults-opt", "Download Separate Episode", "&amp;season_pack=0", "quality");
+addList("sb.setdefaults-opt", "Download Episode Packs", "&amp;season_pack=1", "quality");
 
 addOption("shows", "Optional Param", "", 1);
 addOption("shows", "Show Only Paused", "&amp;paused=1");
@@ -110,6 +112,8 @@ addList("show.addexisting-tvdbid", "80348 (Chuck)", "&amp;tvdbid=80348", "show.a
 addOption("show.addexisting-opt", "Optional Param", "", 1);
 addList("show.addexisting-opt", "No Season Folder", "&amp;season_folder=0", "quality");
 addList("show.addexisting-opt", "Use Season Folder", "&amp;season_folder=1", "quality");
+addList("show.addexisting-opt", "Download Separate Episode", "&amp;season_pack=0", "quality");
+addList("show.addexisting-opt", "Download Episode Packs", "&amp;season_pack=1", "quality");
 
 addList("show.addnew", "101501 (Ancient Aliens)", "&amp;tvdbid=101501", "show.addnew-loc");
 addList("show.addnew", "80348 (Chuck)", "&amp;tvdbid=80348", "show.addnew-loc");
@@ -129,6 +133,8 @@ addList("show.addnew-status", "Ignored", "&amp;status=ignored", "show.addnew-opt
 addOption("show.addnew-opt", "Optional Param", "", 1);
 addList("show.addnew-opt", "No Season Folder", "&amp;season_folder=0", "quality");
 addList("show.addnew-opt", "Use Season Folder", "&amp;season_folder=1", "quality");
+addList("show.addnew-opt", "Download Separate Episode", "&amp;season_pack=0", "quality");
+addList("show.addnew-opt", "Download Episode Packs", "&amp;season_pack=1", "quality");
 
 addOptGroup("sb.searchtvdb", "Search by Name");
 addList("sb.searchtvdb", "Lost", "&amp;name=Lost", "sb.searchtvdb-lang");
