--- a/data/interfaces/default/manage_massEdit.tmpl
+++ b/data/interfaces/default/manage_massEdit.tmpl
@@ -83,6 +83,17 @@
 </div>
 
 <div class="optionWrapper alt">
+<span class="selectTitle">Season Packs <span class="separator">*</span></span>
+    <div class="selectChoices">
+        <select id="edit_season_packs" name="season_packs">
+            <option value="keep">&lt; keep &gt;</option>
+            <option value="enable" #if $season_packs_value then "selected=\"selected\"" else ""#>enable</option>
+            <option value="disable" #if $season_packs_value == False then "selected=\"selected\"" else ""#>disable</option>
+        </select>
+    </div><br />
+</div>
+
+<div class="optionWrapper">
     <span class="selectTitle">Paused</span>
     <div class="selectChoices">
         <select id="edit_paused" name="paused">
